[project]
name = "llm-web"
description = "plugin for simonw's llm to add a web search LLM agent"
readme = "README.md"
authors = [{ name = "thiswillbeyourgithub"}]
license = { file = "LICENSE" }
keywords = ["llm", "openai", "agent", "simonw", "websearch", "web", "search"]
requires-python = ">=3.9"
dependencies = [
    "langchain==0.0.336",
    "numexpr==2.8.7",
    "duckduckgo-search==3.9.5",
    "wikipedia==1.4.0",
    ]

[projects.urls]
Homepage = "https://github.com/thiswillbeyourgithub/llm_web"


[project.entry-points.llm]
web = "llm_web"

[tool.bumpver]
current_version = "0.2"
version_pattern = "MAJOR.MINOR"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
tag = false
commit = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
"llm_web.py" = ["VERSION = {version}"]
